--- a/presentation/comps.Rmd
+++ b/presentation/comps.Rmd
@@ -388,7 +388,7 @@ class: chaptertwo
 # .small[Chapter 2: Legacy Effects of Past Land-Use]
 
 .smaller[**Question:** a) What are the legacy effects of past land-use types on our current ecosystem services in parks?  
-b) Do the neighbourhoods surrounding our study parks have disproportionate representation of past land-use types based on their historical sociodemographics? If so, is the relationship perpetuating systemic injustices?] 
+b) Are parks developed on certain past land use types more likely to be found in neighbourhoods that have historically been home to marginalized groups?
 
 ```{r, echo = F, fig.align='center', out.width="65%"}
 knitr::include_graphics("chapter-2.png")
@@ -408,9 +408,9 @@ class: chaptertwo
 --
 
 1) Previous land-use type will influence urban forest composition and ecosystem service capacity in today's parks according to levels of disturbance, where:  
-  - <span style="color:#43b284; font-weight: 700">Natural</span> parks will have the largest urban forest and highest ecosystem service capacity
-  - <span style = "color:#c88a2c; font-weight: 700">Agricultural</span> parks will have the second largest urban forest and ecosystem service capacity 
-  - <span style = "color:#dd5129; font-weight: 700">Industrial</span> parks will have the smallest urban forest and lowest ecosystem service capacity  
+  - <span style="color:#43b284; font-weight: 700">Forested</span> parks will have the largest trees and highest ecosystem service capacity
+  - <span style = "color:#c88a2c; font-weight: 700">Agricultural</span> parks will have the second largest trees and ecosystem service capacity 
+  - <span style = "color:#dd5129; font-weight: 700">Industrial</span> parks will have the smallest trees and lowest ecosystem service capacity  
 
 --
 
